# elm

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_jupyter.slurm  test_chuq.ipynb
calibration/: continue_cal.py  continue_cal.slurm  gather_walkers.py  mcmc.py  propagate_posterior.ipynb  run_cal.py  run_cal.slurm  run_calibration.sb  run_jupyter.slurm  setup_cal.ipynb  setup_chuq_cal.ipynb  visualize_calibration.ipynb  visualize_samples.ipynb
data/: build_constraints.ipynb  build_elastic_corpus.ipynb  compare_models.ipynb  constraints.ipynb  construct_elm_corpus.ipynb  construct_kd_corpus.ipynb  corpus_kduq_empirical_coverage_and_chi2_demo.ipynb  curate_dataset_from_exfor.ipynb  curate_elastic_dataset_from_exfor.ipynb  curate_pn_data_from_exfor.ipynb  nn_elastic_data.pkl  nn_elastic_workspaces.pkl  precomputation.ipynb  propagate_elm_prior.ipynb  propagate_kduq.ipynb  refactor_query.ipynb  setup_observations.ipynb
docs/: Readme.ipynb
evidence/: curate_elastic_dataset_from_exfor.ipynb  setup_observations.ipynb
likelihood_model/: likelihood_model.ipynb  likelihood_model.pkl
mlem/: mlem.ipynb  mlem_result.pkl
model/: chuq.ipynb  elm.ipynb  elm_nn_model.pkl  elm_pp_model.pkl  kduq.ipynb  kduq_nn_model.pkl  kduq_pp_model.pkl
prior/: chuq_prior.ipynb  does_this_prior_make_sense.ipynb  generate_prior.ipynb  prior_distribution.pickle  prior_distribution_chuq.pickle
propagation/: propagate_chuq.ipynb  propagate_elm_posterior.ipynb  propagate_elm_prior.ipynb  propagate_kduq.ipynb  propagate_mlem.ipynb  test_og.ipynb
src/: __init__.py  elm.py  (+1 more)
(+118 files in other folders)
