[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "elm"
authors = [
  {name="Kyle Beyer", email="beyerk@frib.msu.edu"}
]
description = "The East Lansing Model"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/__version__.py"
